--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "jose": "^4.11.2",
+    "jsonwebtoken": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
